need to fix the flex wrap situation in the class

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ header {
     flex-direction: column;
 }
 
+#a li a {
+    flex-wrap: wrap
+}
+
 /* tabs */
 
 nav.tabs li {
